@@ -30,9 +30,9 @@ The following files are available from the
 or <a href="http://proj.maptools.org/dl">http mirror</a>.<p>
 
 <ul>
-<li> <a href="ftp://ftp.remotesensing.org/proj/proj-4.5.0.tar.gz">
-proj-4.5.0.tar.gz</a> or
-<a href="ftp://ftp.remotesensing.org/proj/proj-4.5.0.zip">proj-4.5.0.zip
+<li> <a href="ftp://ftp.remotesensing.org/proj/proj-4.6.0.tar.gz">
+proj-4.6.0.tar.gz</a> or
+<a href="ftp://ftp.remotesensing.org/proj/proj-4.6.0.zip">proj-4.6.0.zip
 </a>: Current source release.<p>
 
 <li> <a href="ftp://ftp.remotesensing.org/proj/proj446_win32_bin.zip">
